--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0px;
+  padding: 0px;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,66 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a.active{
+  color: red;
+  border-bottom: 2px solid blueviolet;
+}
+
+a:hover{
+  background-color: rgb(216, 244, 249);
+}
+
+nav{
+  background-color: antiquewhite;
+}
+
+nav ul{
+  display: flex;
+  list-style: none;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-left: 50px;
+}
+
+nav ul li a{
+  list-style: none;
+  text-decoration: none;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 20px;
+  padding: 5px 10px 5px 10px;
+  font-weight: 500;
+}
+
+
+h1{
+  margin-top: 50px;
+  text-align: center;
+}
+
+.HomeSec{
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.HomeSec input{
+  width: 500px;
+  height: 20px;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: 500;
+  border-radius: 10px;
+}
+
+.imgDiv{
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  font-size: 50px;
+  font-weight: bolder;
+  color: gray;
+  
 }
